--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 *.pyc
 __pycache__/
 local_settings.py
-db.sqlite3
 db.sqlite3-journal
+db.sqlite3
+.db.sqlite3
+/db.sqlite3
 media
 
 ### Django.Python Stack ###
